--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Gucci</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body class="bg-success bg-opacity-10">
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand justify-content-center" href="#">
                 GUCCI</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -23,16 +23,20 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav  ">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="#"><i class="fa fa-home" style="font-size:24px"></i>
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Cart</a>
+                        <a class="nav-link" href="#"><i class="fa fa-shopping-bag" style="font-size:24px"></i>
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Wishlist</a>
+                        <a class="nav-link" href="#"><i class="fa fa-heart-o" style="font-size:24px"></i>
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="#"><i class="fa fa-user" style="font-size:24px"></i>
+                        </a>
                     </li>
 
                 </ul>
@@ -570,10 +574,12 @@
             </div>
         </div>
 
+        <div class="form"></div>
+
     </main>
 
-    <footer class="bg-light text-center m-5">
-        <div class="text-center p-3">
+    <footer class="bg-black text-center mt-5 mb-5">
+        <div class="text-center pt-3 pb-3">
             <span>© 2024 Gucci</span>
             <a class="text-dark" href="#">All rights reserved.</a>
         </div>
