changed subscribe button and resize shopping bag icon

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fa fa-shopping-bag" style="font-size:24px"></i>
+                        <a class="nav-link" href="#"><i class="fa fa-shopping-bag" style="font-size:22px"></i>
                         </a>
                     </li>
                     <li class="nav-item">
@@ -602,7 +602,7 @@
             <label> Subscribe to receive news from Gucci</label>
             <br>
             <input type="email" id="email" name="email" placeholder="Enter Your Email Address">
-            <button type="submit">OK</button>
+            <button type="submit" class="btn btn-dark">Subscribe</button>
         </div>
 
 
